// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense form correctly 1`] = `
<DocumentFragment>
  <div>
    <form
      data-testid="expense-form"
    >
      <input
        name="description"
        placeholder="Description"
        type="text"
        value=""
      />
      <input
        name="amount"
        placeholder="Amount"
        type="text"
        value=""
      />
      <div
        class="SingleDatePicker SingleDatePicker_1"
      >
        <div>
          <div
            class="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
          >
            <div
              class="DateInput DateInput_1"
            >
              <input
                aria-describedby="DateInput__screen-reader-message-date"
                aria-label="Date"
                autocomplete="off"
                class="DateInput_input DateInput_input_1"
                id="date"
                name="date"
                placeholder="Date"
                type="text"
                value="11/03/2023"
              />
              <p
                class="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                id="DateInput__screen-reader-message-date"
              >
                Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
              </p>
            </div>
          </div>
        </div>
      </div>
      <textarea
        placeholder="Add a note for your expense (optional)"
      />
      <button>
        Add Expense
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Should render expense form with data correctly 1`] = `
<DocumentFragment>
  <div>
    <form
      data-testid="expense-form"
    >
      <input
        name="description"
        placeholder="Description"
        type="text"
        value="Rent"
      />
      <input
        name="amount"
        placeholder="Amount"
        type="text"
        value="1095"
      />
      <div
        class="SingleDatePicker SingleDatePicker_1"
      >
        <div>
          <div
            class="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
          >
            <div
              class="DateInput DateInput_1"
            >
              <input
                aria-describedby="DateInput__screen-reader-message-date"
                aria-label="Date"
                autocomplete="off"
                class="DateInput_input DateInput_input_1"
                id="date"
                name="date"
                placeholder="Date"
                type="text"
                value="12/27/1969"
              />
              <p
                class="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                id="DateInput__screen-reader-message-date"
              >
                Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
              </p>
            </div>
          </div>
        </div>
      </div>
      <textarea
        placeholder="Add a note for your expense (optional)"
      />
      <button>
        Add Expense
      </button>
    </form>
  </div>
</DocumentFragment>
`;
